--- a/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
+++ b/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
@@ -45,8 +45,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SSDTLifecycleExtensionPackage.cs" />
+    <Compile Include="ViewModels\ConfigurationViewModel.cs" />
+    <Compile Include="ViewModels\ScriptCreationViewModel.cs" />
+    <Compile Include="ViewModels\VersionHistoryViewModel.cs" />
+    <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Windows\ConfigurationWindow.cs" />
     <Compile Include="Windows\ConfigurationWindowCommand.cs" />
     <Compile Include="Windows\ConfigurationWindowControl.xaml.cs">
