--- a/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
+++ b/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
@@ -108,9 +108,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Windows\Resources\ConfigurationWindowCommand.png" />
-    <Content Include="Windows\Resources\ScriptCreationWindowCommand.png" />
-    <Content Include="Windows\Resources\VersionHistoryWindowCommand.png" />
+    <Content Include="Resources\ConfigurationWindowCommand.png" />
+    <Content Include="Resources\ScriptCreationWindowCommand.png" />
+    <Content Include="Resources\VersionHistoryWindowCommand.png" />
     <VSCTCompile Include="SSDTLifecycleExtensionPackage.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
     </VSCTCompile>
