--- a/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
+++ b/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
@@ -46,6 +46,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Commands\SSDTLifecycleExtensionPackageCommandSet.cs" />
+    <Compile Include="Models\ConfigurationModel.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SSDTLifecycleExtensionPackage.cs" />
@@ -91,7 +92,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.200" ExcludeAssets="runtime" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.1.3121" />
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.2.1045">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>9.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Unity">
       <Version>5.10.3</Version>
     </PackageReference>
