--- a/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
+++ b/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
@@ -46,9 +46,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Commands\SSDTLifecycleExtensionPackageCommandSet.cs" />
+    <Compile Include="DataAccess\FileSystemAccess.cs" />
+    <Compile Include="DataAccess\IFileSystemAccess.cs" />
     <Compile Include="Models\ConfigurationModel.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ConfigurationService.cs" />
+    <Compile Include="Services\IConfigurationService.cs" />
     <Compile Include="SSDTLifecycleExtensionPackage.cs" />
     <Compile Include="ViewModels\ConfigurationViewModel.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
@@ -125,6 +129,7 @@
       <ResourceName>Menus.ctmenu</ResourceName>
     </VSCTCompile>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
