--- a/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
+++ b/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
@@ -45,12 +45,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Commands\SSDTLifecycleExtensionPackageCommandSet.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="DataAccess\FileSystemAccess.cs" />
     <Compile Include="DataAccess\IFileSystemAccess.cs" />
+    <Compile Include="DataAccess\IVisualStudioAccess.cs" />
+    <Compile Include="DataAccess\VisualStudioAccess.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CommandAvailabilityService.cs" />
     <Compile Include="Services\ConfigurationService.cs" />
+    <Compile Include="Services\ICommandAvailabilityService.cs" />
     <Compile Include="Services\IConfigurationService.cs" />
     <Compile Include="SSDTLifecycleExtensionPackage.cs" />
     <Compile Include="ViewModels\ConfigurationViewModel.cs" />
