--- a/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
+++ b/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
@@ -58,7 +58,11 @@
     <Compile Include="Services\ICommandAvailabilityService.cs" />
     <Compile Include="Services\IConfigurationService.cs" />
     <Compile Include="Services\IScriptCreationService.cs" />
+    <Compile Include="Services\ISqlProjectService.cs" />
+    <Compile Include="Services\IVersionService.cs" />
     <Compile Include="Services\ScriptCreationService.cs" />
+    <Compile Include="Services\SqlProjectService.cs" />
+    <Compile Include="Services\VersionService.cs" />
     <Compile Include="SSDTLifecycleExtensionPackage.cs" />
     <Compile Include="ViewModels\ConfigurationViewModel.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
@@ -98,6 +102,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
