--- a/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
+++ b/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
@@ -46,6 +46,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="DataAccess\FileSystemAccess.cs" />
     <Compile Include="DataAccess\IFileSystemAccess.cs" />
     <Compile Include="DataAccess\IVisualStudioAccess.cs" />
