--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\ScriptModifiers\AddCustomHeaderModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\AddCustomFooterModifierTests.cs" />
+    <Compile Include="Shared\ScriptModifiers\ScriptModifierFactoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Moq">
