--- a/src/Shared/Shared.csproj
+++ b/src/Shared/Shared.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>SSDTLifecycleExtension.Shared</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+  </ItemGroup>
+
 </Project>
