--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -46,6 +46,12 @@
     <Compile Include="Shared\ScriptModifiers\AddCustomHeaderModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\AddCustomFooterModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\ScriptModifierFactoryTests.cs" />
+    <Compile Include="Shared\Services\BuildServiceTests.cs" />
+    <Compile Include="Shared\Services\CommandAvailabilityServiceTests.cs" />
+    <Compile Include="Shared\Services\ConfigurationServiceTests.cs" />
+    <Compile Include="Shared\Services\ScaffoldingServiceTests.cs" />
+    <Compile Include="Shared\Services\ScriptCreationServiceTests.cs" />
+    <Compile Include="Shared\Services\SqlProjectServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Moq">
