Replaced SqlPackage.exe reference with DacFx dependency

--- a/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
+++ b/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Converters\BoolInvertConverter.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
+    <Compile Include="DataAccess\DacAccess.cs" />
     <Compile Include="DataAccess\FileSystemAccess.cs" />
     <Compile Include="DataAccess\VisualStudioAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -91,6 +92,9 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations">
       <Version>2019.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.SqlServer.DacFx.x64">
+      <Version>150.4384.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.200" ExcludeAssets="runtime" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.2.2060">
