--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Shared\ScriptModifiers\AddCustomHeaderModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\AddCustomFooterModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\ScriptModifierFactoryTests.cs" />
+    <Compile Include="Shared\ScriptModifiers\StringSearchModifierBaseTests.cs" />
     <Compile Include="Shared\Services\BuildServiceTests.cs" />
     <Compile Include="Shared\Services\CommandAvailabilityServiceTests.cs" />
     <Compile Include="Shared\Services\ConfigurationServiceTests.cs" />
