Update azure-pipelines.yml for Azure Pipelines
Added display names for single steps

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,32 +17,39 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-# Install SonarScanner
 - script: |
     dotnet tool install --global dotnet-sonarscanner
+  name: InstallSonarScanner
+  displayName: Install SonarScanner
 
-# Begin SonarScanner
 - script: |
     dotnet sonarscanner begin /k:"SSDTLifecycleExtension" /o:"herdo-github" /d:sonar.host.url="https://sonarcloud.io"  /d:sonar.login="$(SONAR_TOKEN)" /v:"$(Build.BuildId)"
+  name: BeginSonarScanner
+  displayName: Begin SonarScanner
 
 - task: NuGetToolInstaller@0
+  displayName: NuGet Tool Installer
 
 - task: NuGetCommand@2
+  displayName: Restore NuGet packages
   inputs:
     restoreSolution: '$(solution)'
 
 - task: VSBuild@1
+  displayName: Build solution
   inputs:
     solution: '$(solution)'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
 - task: VSTest@2
+  displayName: Run tests
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
     codeCoverageEnabled: true
 
-# End SonarScanner
 - script: |
     dotnet sonarscanner end /d:sonar.login="$(SONAR_TOKEN)"
+  name: EndSonarScanner
+  displayName: End SonarScanner
