--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,15 +17,17 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: |
-    dotnet tool install --global dotnet-sonarscanner
-  name: InstallSonarScanner
-  displayName: Install SonarScanner
+- task: SonarCloudPrepare@1
+  displayName: Prepare SonarCloud
+  inputs:
+    projectName: 'SSDT Lifecycle Extension'
+    projectKey: 'SSDTLifecycleExtension'
+    projectVersion: '$(Build.BuildId)'
+    organization: 'herdo-github'
+    SonarCloud: 'SonarCloud-CodeAnalysis-Server'
 
-- script: |
-    dotnet sonarscanner begin /k:"SSDTLifecycleExtension" /o:"herdo-github" /d:sonar.host.url="https://sonarcloud.io"  /d:sonar.login="$(SONAR_TOKEN)" /v:"$(Build.BuildId)"
-  name: BeginSonarScanner
-  displayName: Begin SonarScanner
+- task: SonarCloudAnalyze@1 
+  displayName: Begin SonarCloud Analyzer
 
 - task: NuGetToolInstaller@0
   displayName: NuGet Tool Installer
@@ -49,7 +51,5 @@ steps:
     configuration: '$(buildConfiguration)'
     codeCoverageEnabled: true
 
-- script: |
-    dotnet sonarscanner end /d:sonar.login="$(SONAR_TOKEN)"
-  name: EndSonarScanner
-  displayName: End SonarScanner
+- task: SonarCloudPublish@1
+  displayName: Publish SonarCloud results
