Update azure-pipelines.yml for Azure Pipelines
added trigger for pull requests and modified trigger for branches

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,12 @@
 trigger:
  branches:
    include:
-     - master/src
+     - master
+
+pr:
+ branches:
+   include:
+     - master
 
 pool:
   vmImage: 'windows-latest'
