--- a/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
+++ b/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
@@ -51,6 +51,10 @@
     <Compile Include="DataAccess\DacAccess.cs" />
     <Compile Include="DataAccess\FileSystemAccess.cs" />
     <Compile Include="DataAccess\VisualStudioAccess.cs" />
+    <Compile Include="MVVM\AsyncCommand.cs" />
+    <Compile Include="MVVM\IAsyncCommand.cs" />
+    <Compile Include="MVVM\IErrorHandler.cs" />
+    <Compile Include="MVVM\TaskUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SSDTLifecycleExtensionPackage.cs" />
     <Compile Include="ViewModels\ConfigurationViewModel.cs" />
