--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,12 +56,6 @@ steps:
 - task: SonarCloudAnalyze@1 
   displayName: Run SonarCloud Analyzer
 
-- task: PowerShell@2
-  displayName: Scan for files
-  inputs:
-    targetType: inline
-    script: Get-ChildItem -Path '$(Build.SourcesDirectory)' -Recurse
-
 - task: CopyFiles@2
   displayName: Copy VSIX to artifact staging directory
   inputs:
@@ -69,6 +63,7 @@ steps:
     Contents: |
      **\bin\Release\*.vsix
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    flattenFolders: true
 
 - task: PublishBuildArtifacts@1
   displayName: Publish VSIX build artifact
