Update azure-pipelines.yml for Azure Pipelines
added readme.md to copy files task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,6 +63,7 @@ steps:
     SourceFolder: '$(Build.SourcesDirectory)'
     Contents: |
      deployment\*
+     README.md
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 - task: CopyFiles@2
