Changed publisher name

--- a/deployment/extension-manifest.json
+++ b/deployment/extension-manifest.json
@@ -16,7 +16,7 @@
     },
     "overview": "../README.md",
     "priceCategory": "free",
-    "publisher": "Stefan 'Herdo' Over",
+    "publisher": "Herdo",
     "private": false,
     "qna": true,
     "repo": "https://github.com/Herdo/SSDTLifecycleExtension"
