--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Shared\Contracts\PathCollectionTests.cs" />
     <Compile Include="Shared\Contracts\SqlProjectPropertiesTests.cs" />
     <Compile Include="Shared\Contracts\SqlProjectTests.cs" />
+    <Compile Include="Shared\Models\VersionModelTests.cs" />
     <Compile Include="Shared\ScriptModifiers\AddCustomHeaderModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\AddCustomFooterModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\ScriptModifierFactoryTests.cs" />
