--- a/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
+++ b/src/SSDTLifecycleExtension/SSDTLifecycleExtension.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DataAccess\DacAccess.cs" />
     <Compile Include="DataAccess\FileSystemAccess.cs" />
     <Compile Include="DataAccess\VisualStudioAccess.cs" />
+    <Compile Include="DependencyResolver.cs" />
     <Compile Include="MVVM\AsyncCommand.cs" />
     <Compile Include="MVVM\IAsyncCommand.cs" />
     <Compile Include="MVVM\IErrorHandler.cs" />
