--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,12 @@ steps:
 - task: SonarCloudAnalyze@1 
   displayName: Run SonarCloud Analyzer
 
+- task: DownloadSecureFile@1
+  name: DownloadVsixCertificate
+  displayName: Download VSIX certificate
+  inputs:
+    secureFile: SSDTLifecycleExtensionKey.pfx
+
 - task: PowerShell@2
   name: SignVSIX
   displayName: Sign VSIX
@@ -63,6 +69,7 @@ steps:
     targetType: filePath
     filePath: |
      '$(Build.SourcesDirectory)\build\sign-vsix.ps1'
+    arguments: $(SSDTLifecycleExtensionKeyPassword)
 
 - task: CopyFiles@2
   name: CopyDeploymentData
