Update azure-pipelines.yml for Azure Pipelines
Removed quotes from SignVSIX step

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ steps:
   inputs:
     targetType: filePath
     filePath: |
-     'build\sign-vsix.ps1'
+     build\sign-vsix.ps1
     arguments: $(SSDTLifecycleExtensionKeyPassword)
 
 - task: CopyFiles@2
