Implemented tests for VersionService, renamed "DetermineFinalVersion" method to "FormatVersion"

--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Shared\Services\ScaffoldingServiceTests.cs" />
     <Compile Include="Shared\Services\ScriptCreationServiceTests.cs" />
     <Compile Include="Shared\Services\SqlProjectServiceTests.cs" />
+    <Compile Include="Shared\Services\VersionServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK">
