Added tests for TrackDacpacVersionModifier, changed formatting of TrackDacpacVersionModifier result, flagged SqlProject properties as NotNull

--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Shared\ScriptModifiers\CommentOutUnnamedDefaultConstraintDropsModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\ScriptModifierFactoryTests.cs" />
     <Compile Include="Shared\ScriptModifiers\StringSearchModifierBaseTests.cs" />
+    <Compile Include="Shared\ScriptModifiers\TrackDacpacVersionModifierTests.cs" />
     <Compile Include="Shared\Services\BuildServiceTests.cs" />
     <Compile Include="Shared\Services\CommandAvailabilityServiceTests.cs" />
     <Compile Include="Shared\Services\ConfigurationServiceTests.cs" />
