--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Extension\Converters\BoolInvertConverterTests.cs" />
     <Compile Include="Extension\Converters\BoolToVisibilityConverterTests.cs" />
     <Compile Include="Extension\MVVM\TaskUtilitiesTests.cs" />
+    <Compile Include="Extension\ViewModels\ConfigurationViewModelTests.cs" />
     <Compile Include="Extension\ViewModels\ViewModelBaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\Contracts\PathCollectionTests.cs" />
