--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Extension\MVVM\TaskUtilitiesTests.cs" />
     <Compile Include="Extension\ViewModels\ConfigurationViewModelTests.cs" />
     <Compile Include="Extension\ViewModels\ViewModelBaseTests.cs" />
+    <Compile Include="Extension\Windows\ToolWindowInitializerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\Contracts\PathCollectionTests.cs" />
     <Compile Include="Shared\Contracts\SqlProjectPropertiesTests.cs" />
