--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extension\DataAccess\DacAccessTests.cs" />
     <Compile Include="Extension\DependencyResolverTests.cs" />
     <Compile Include="Extension\MVVM\AsyncCommandTests.cs" />
     <Compile Include="Extension\Commands\BaseCommandTests.cs" />
