--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Shared\Services\ScriptCreationServiceTests.cs" />
     <Compile Include="Shared\Services\SqlProjectServiceTests.cs" />
     <Compile Include="Shared\Services\VersionServiceTests.cs" />
+    <Compile Include="Shared\Services\XmlFormatServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK">
