Update azure-pipelines.yml for Azure Pipelines
Improved VS Test task to re-run if not to many tests fail, and to continue the build when the test task fails

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,10 +48,15 @@ steps:
 
 - task: VSTest@2
   displayName: Run tests
+  continueOnError: true
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
     codeCoverageEnabled: true
+    runInParallel: true
+    rerunFailedTests: true
+    rerunType: basedOnTestFailureCount
+    rerunFailedTestCasesMaxLimit: 10
 
 - task: SonarCloudAnalyze@1 
   displayName: Run SonarCloud Analyzer
