--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,8 +31,8 @@ steps:
     organization: 'herdo-github'
     SonarCloud: 'SonarCloud-CodeAnalysis-Server'
     extraProperties: |
-     sonar.sources="$(Build.SourcesDirectory)\src"
-     sonar.tests="$(Build.SourcesDirectory)\src\UnitTests","$(Build.SourcesDirectory)\src\TestDatabase"
+     sonar.sources=src\SSDTLifecycleExtension,src\Shared
+     sonar.tests=src\UnitTests,src\TestDatabase
 
 - task: NuGetToolInstaller@0
   displayName: NuGet Tool Installer
