--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
     organization: 'herdo-github'
     SonarCloud: 'SonarCloud-CodeAnalysis-Server'
     extraProperties: |
-     sonar.exclusions=src\TestDatabase
+     sonar.exclusions=src/TestDatabase/*
 
 - task: NuGetToolInstaller@0
   displayName: NuGet Tool Installer
