--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Extension\ViewModels\ViewModelBaseTests.cs" />
     <Compile Include="Extension\Windows\ToolWindowInitializerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\Contracts\DefaultConstraintTests.cs" />
     <Compile Include="Shared\Contracts\PathCollectionTests.cs" />
     <Compile Include="Shared\Contracts\SecureResultTests.cs" />
     <Compile Include="Shared\Contracts\SqlProjectPropertiesTests.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="Shared\ScriptModifiers\AddCustomHeaderModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\AddCustomFooterModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\CommentOutUnnamedDefaultConstraintDropsModifierTests.cs" />
+    <Compile Include="Shared\ScriptModifiers\ReplaceUnnamedDefaultConstraintDropsModifierTests.cs" />
     <Compile Include="Shared\ScriptModifiers\ScriptModifierFactoryTests.cs" />
     <Compile Include="Shared\ScriptModifiers\StringSearchModifierBaseTests.cs" />
     <Compile Include="Shared\ScriptModifiers\TrackDacpacVersionModifierTests.cs" />
