--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -113,6 +113,10 @@
     <EmbeddedResource Include="Resources\TestDatabase_Empty.dacpac" />
     <EmbeddedResource Include="Resources\TestDatabase_WithAuthorTable.dacpac" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\TestDatabase_AuthorWithDefaultConstraints.dacpac" />
+    <EmbeddedResource Include="Resources\TestDatabase_AuthorWithLessDefaultConstraints.dacpac" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
