Implemented tests for ValidateTargetVersionUnit

--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Shared\WorkUnits\FormatTargetVersionUnitTests.cs" />
     <Compile Include="Shared\WorkUnits\LoadPathsUnitTests.cs" />
     <Compile Include="Shared\WorkUnits\LoadSqlProjectPropertiesUnitTests.cs" />
+    <Compile Include="Shared\WorkUnits\ValidateTargetVersionUnitTests.cs" />
     <Compile Include="Shared\WorkUnits\VerifyPathsUnitTests.cs" />
     <Compile Include="Shared\WorkUnits\WorkUnitFactoryTests.cs" />
   </ItemGroup>
