Added test to make sure that ScriptModifier.RemoveSqlCmdStatements is always the highest value

--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Shared\Contracts\SecureResultTests.cs" />
     <Compile Include="Shared\Contracts\SqlProjectPropertiesTests.cs" />
     <Compile Include="Shared\Contracts\SqlProjectTests.cs" />
+    <Compile Include="Shared\Enums\ScriptModifierTest.cs" />
     <Compile Include="Shared\Models\BaseModelTests.cs" />
     <Compile Include="Shared\Models\BaseStateModelTests.cs" />
     <Compile Include="Shared\Models\ConfigurationModelTests.cs" />
